bootstrap/argo-workflows/ns-argo-workflows.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argo-workflows
  labels:
    name: argo-workflows
